Fix for Bug #20639  DomElement->get_elements_by_tagname() doesn't work